[workspace]
resolver = "2"
members = [
    "earthbucks_ecdsa",
    "earthbucks_rfc6979",
]

[profile.dev]
opt-level = 2

[patch.crates-io]
# A global patch crates-io block is used to avoid duplicate dependencies
# when pulling a member crate through git
earthbucks_ecdsa           = { path = "./earthbucks_ecdsa" }
earthbucks_rfc6979         = { path = "./earthbucks_rfc6979" }
